--- a/breakPointApp/Base.lproj/Main.storyboard
+++ b/breakPointApp/Base.lproj/Main.storyboard
@@ -77,7 +77,7 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wNz-4W-8eX" id="ynL-Ee-aJ2">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="99.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="MCj-vs-Qqf">
@@ -672,7 +672,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qOW-f6-2oX">
                                 <rect key="frame" x="0.0" y="70" width="320" height="265"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="d88-dm-pn9">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="d88-dm-pn9">
                                         <rect key="frame" x="110" y="26" width="100" height="100"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="7Lt-dy-T7A"/>
@@ -689,14 +689,29 @@
                                         <color key="textColor" red="0.015686274510000001" green="0.6705882353" blue="0.7725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eqg-uY-p0Q">
+                                        <rect key="frame" x="81" y="134" width="159" height="22"/>
+                                        <color key="backgroundColor" red="0.16078431369999999" green="0.16862745100000001" blue="0.20392156859999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="22" id="7Mh-pW-8kg"/>
+                                            <constraint firstAttribute="width" constant="159" id="LST-ar-Ez6"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <state key="normal" title="Change your photo"/>
+                                        <connections>
+                                            <action selector="uploadButtonPressed:" destination="ulM-yy-CDV" eventType="touchUpInside" id="43c-Vm-med"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="d88-dm-pn9" firstAttribute="centerX" secondItem="qOW-f6-2oX" secondAttribute="centerX" id="50y-Yo-jL3"/>
                                     <constraint firstItem="Wyf-5D-3HG" firstAttribute="top" secondItem="d88-dm-pn9" secondAttribute="bottom" constant="25" id="7ot-YN-hxL"/>
                                     <constraint firstItem="d88-dm-pn9" firstAttribute="top" secondItem="qOW-f6-2oX" secondAttribute="top" constant="26" id="A3T-gn-xuL"/>
+                                    <constraint firstItem="eqg-uY-p0Q" firstAttribute="top" secondItem="d88-dm-pn9" secondAttribute="bottom" constant="8" id="DCu-Qz-Ei1"/>
                                     <constraint firstItem="Wyf-5D-3HG" firstAttribute="centerX" secondItem="qOW-f6-2oX" secondAttribute="centerX" id="prw-Fs-nEE"/>
                                     <constraint firstAttribute="height" constant="265" id="vs8-x3-Di5"/>
+                                    <constraint firstItem="eqg-uY-p0Q" firstAttribute="centerX" secondItem="qOW-f6-2oX" secondAttribute="centerX" id="xsB-BG-CT5"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="KFY-s2-fPK">
